--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -5,6 +5,12 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     </head>
     <body>
-        <h1>Hello World!</h1>
+        <h1>Despliegue de Aplicaciones Web. 2º DAW</h1>
+        <h1>Aplicación web de José Manuel</h1>
+        <ul>
+            <li>
+                <h2><a href="saludo.jsp">Saludo con JSP</a></h2>
+            </li>
+        </ul>
     </body>
 </html>
