--- a/src/main/webapp/formulario.html
+++ b/src/main/webapp/formulario.html
@@ -12,9 +12,10 @@ and open the template in the editor.
     </head>
     <body>
         <form method="post" action="proceso.jsp">
-            <label for="nombre">Nombre</label><input type="text" id="nombre" name="nombre"/>
-            <label for="edad">Edad</label><input type="text" id="edad" name="edad"/>
-            <label for="correo">Correo</label><input type="text" id="correo" name="correo"/>
+            <label for="nombre">Nombre</label><input type="text" id="nombre" name="nombre"/><br/>
+            <label for="edad">Edad</label><input type="number" id="edad" name="edad"/><br/>
+            <label for="correo">Correo</label><input type="text" id="correo" name="correo"/><br/>
+            <input type="submit" name="btnEnviar" value="Enviar"/>
         </form>
     </body>
 </html>
